<resources>
    <string name="app_name">Currency Transfer</string>
    <string name="name">name</string>
    <string name="charCode">CCD</string>
    <string name="jsonCurrency"/>
    <string name="buttonTransfer">Конвертировать</string>
    <string name="buttonBack">Назад</string>
    <string name="buttonRefresh">Обновить</string>
    <string name="rubEditText">Количество в рублях</string>
    <string name="currencyEditText">Количество в валюте</string>
    <string name="textViewRub">RUB</string>
    <string name="textViewCurrency">USD</string>
    <string name="refreshed">Обновляется…</string>
    <string name="parseDateException">Ошибка парса даты JSON</string>
    <string name="connectionError">Ошибка подключения</string>
    <string name="cbrLink">https://www.cbr-xml-daily.ru</string>
</resources>