<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TransferActivity">


    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumberDecimalRub"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="27dp"
        android:text="@string/textViewCurrency" />

    <EditText
        android:id="@+id/editTextNumberDecimalRub"
        android:layout_width="789dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textViewRub"
        android:autofillHints="Количество в валюте"
        android:ems="10"
        android:hint="@string/rubEditText"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575" />


    <EditText
        android:id="@+id/editTextNumberDecimalCurrency"
        android:layout_width="789dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumberDecimalRub"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textViewCurrency"
        android:autofillHints="Количество в валюте"
        android:ems="10"
        android:hint="@string/currencyEditText"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/buttonTransfer"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:maxLines="1"
        android:text="@string/buttonTransfer"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="5sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/textViewRub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextNumberDecimalCurrency"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="14dp"
        android:text="@string/textViewRub" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextNumberDecimalRub"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="TextView" />

</RelativeLayout>